refactor: retornando dto de usuario em avaliacao